[tool.poetry]
name = "mypo"
version = "0.0.21"
description = ""
authors = [
    "sonesuke <iamsonesuke@gmail.com>"
]

license = "MIT"
readme = "README.md"

repository = "https://github.com/sonesuke/mypo"
homepage = "https://github.com/sonesuke/mypo"

[tool.poetry.dependencies]
python = "^3.9.1"
pandas = "^1.2.2"
yfinance = "^0.1.55"
numpy = "^1.20.1"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
jupyter = "^1.0.0"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
flake8-docstrings = "^1.5.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
