[tool.poetry]
name = "mypo"
version = "0.0.0" # refresh automatically by CI
description = ""
authors = [
    "sonesuke <iamsonesuke@gmail.com>"
]

license = "MIT"
readme = "README.md"

repository = "https://github.com/sonesuke/mypo"
homepage = "https://github.com/sonesuke/mypo"

[tool.poetry.dependencies]
python = "^3.9.2"
pandas = "^1.2.2"
yfinance = "^0.1.55"
numpy = "^1.20.1"
scipy = "^1.6.0"
pymc3 = "^3.11.1"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
jupyter = "^1.0.0"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
flake8-docstrings = "^1.5.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.2"
nbsphinx = "^0.8.2"
pydata-sphinx-theme = "^0.5.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
